# wdrc_rs

./: Cargo.toml  build.sh  config.json.template  restart.sh
src/: change.rs  main.rs  recent_changes.rs  revision_compare.rs  wdrc.rs
