[package]
name = "wdrc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc.git" }
